MDEV-746: Merged mysql fix of the bug LP:1002546 & MySQL Bug#13651009.

Empty result after reading const tables now works for subqueries.